samples/_failures_safe/1761179796_e1aa70_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a97d92c.c: In function ‘show_high_severity_logs’:
./samples/SAFE/__tmp_6a97d92c.c:138:86: error: expected ‘)’ at end of input
  138 |             printf("%s [%s] %s\n", filtered[i].timestamp, filtered[i].level, filtered
      |                   ~                                                                  ^
      |                                                                                      )
./samples/SAFE/__tmp_6a97d92c.c:138:13: error: expected declaration or statement at end of input
  138 |             printf("%s [%s] %s\n", filtered[i].timestamp, filtered[i].level, filtered
      |             ^~~~~~
./samples/SAFE/__tmp_6a97d92c.c:138:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6a97d92c.c:138:13: error: expected declaration or statement at end of input
